# avocado

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
native/: CMakeLists.txt
native/.cache/clangd/index/: compress.c.1C51B955A7A0F4CC.idx  compress.h.BDA729645ABFB901.idx
native/include/avocado/: compress.h
native/src/: bwt.c  compress.c  map.c  map.h
native/src/include/: bwt.h
src/avocado/: _avocado_base.py  _c_implementation.py  _python_implementation.py  avocado.py  exceptions.py
src/avocado/_cli/: __init__.py  compress.py  decompress.py  generate_codes.py
src/avocado/_huffman/: codes_from_schema.py  generate_codes.py  huffman_tree.py
src/avocado/_native/: _bindings.py
src/avocado/_native/lib/: libavocado.dylib
src/avocado/_substitute/: marshmallow_substitution.py
src/avodaco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: test_file.py  test_generate_token_from_schema.py  test_performance.py
test/test_compression/: test_compression.py  test_huffman_single_bit_codes.py  test_number_schema.py
